CSS fix for banner spacing on content

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -347,6 +347,7 @@ svg.ripple {
 .standard-banner {
     color: $white;
     height: 180px;
+    margin-bottom: 20px;
 }
 
 
